--- a/application/index/view/grade/index.html
+++ b/application/index/view/grade/index.html
@@ -1,4 +1,5 @@
 {include file='public/header'/}
+<script type="text/javascript" src="__STATIC__/lib/laypage/1.2/skin/laypage.css"></script>
 <body>
 <nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 班级管理 <span class="c-gray en">&gt;</span> 班级列表 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
 <div class="pd-20">
@@ -34,12 +35,13 @@
 
 {include file='public/bottom'/}
 <!--请在下方写此页面业务相关的脚本-->
-<script type="text/javascript" src="__STATIC__/lib/My97DatePicker/4.8/WdatePicker.js"></script>
 <script type="text/javascript" src="__STATIC__/lib/datatables/1.10.0/jquery.dataTables.min.js"></script>
 <script type="text/javascript" src="__STATIC__/lib/laypage/1.2/laypage.js"></script>
 <script type="text/javascript">
   $(function () {
     $(".table-sort").DataTable({
+      // 分页,默认打开
+      // paging: true,
     });
   });
     /*班级-添加*/
