--- a/application/index/view/student/index.html
+++ b/application/index/view/student/index.html
@@ -1,5 +1,5 @@
 {include file='public/header'/}
-<link rel="stylesheet" type="text/css" href="http://cdn.datatables.net/1.10.21/css/jquery.dataTables.min.css" />
+<script type="text/javascript" src="__STATIC__/lib/laypage/1.2/skin/laypage.css"></script>
 <body>
 <nav class="breadcrumb"><i class="Hui-iconfont">&#xe67f;</i> 首页 <span class="c-gray en">&gt;</span> 学生管理 <span class="c-gray en">&gt;</span> 学生列表 <a class="btn btn-success radius r" style="line-height:1.6em;margin-top:3px" href="javascript:location.replace(location.href);" title="刷新" ><i class="Hui-iconfont">&#xe68f;</i></a></nav>
 <div class="pd-20">
@@ -17,31 +17,33 @@
       </tr>
     </thead>
     <tbody>
-    {volist name='list' id='v'}
-    <tr class="text-c">
-      <td><input type="checkbox" value="{$v.uid}" name=""></td>
-      <td>{$v.uid}</td>
-      <td>{$v.username}</td>
-      <td>{$v.g_name}</td>
-      <td class="f-14 user-manage"><a title="编辑" href="javascript:;" onclick='student_edit("编辑","{:url('index/student/edit',['uid'=>$v['uid']])}","550","")' class="ml-5" style="text-decoration:none"><i class="Hui-iconfont Hui-iconfont-edit"></i></a>
-        <a title="删除" href="javascript:;" onclick='student_del(this,"{$v.uid}")' class="ml-5" style="text-decoration:none"><i class="Hui-iconfont Hui-iconfont-del2"></i></a>
-      </td>
-    </tr>
-    {/volist}
+      {volist name='list' id='v'}
+      <tr class="text-c">
+        <td><input type="checkbox" value="{$v.uid}" name=""></td>
+        <td>{$v.uid}</td>
+        <td>{$v.username}</td>
+        <td>{$v.g_name}</td>
+        <td class="f-14 user-manage"><a title="编辑" href="javascript:;" onclick='student_edit("编辑","{:url('index/student/edit',['uid'=>$v['uid']])}","550","")' class="ml-5" style="text-decoration:none"><i class="Hui-iconfont Hui-iconfont-edit"></i></a>
+          <a title="删除" href="javascript:;" onclick='student_del(this,"{$v.uid}")' class="ml-5" style="text-decoration:none"><i class="Hui-iconfont Hui-iconfont-del2"></i></a>
+        </td>
+      </tr>
+      {/volist}
     </tbody>
   </table>
-  <div id="pageNav" class="pageNav"></div>
 </div>
 
 {include file='public/bottom'/}
 <!--请在下方写此页面业务相关的脚本-->
-<script type="text/javascript" src="__STATIC__/LIB/My97DatePicker/4.8/WdatePicker.js"></script>
-<script type="text/javascript" src="__STATIC__/LIB/datatables/1.10.0/jquery.dataTables.min.js"></script>
-<script type="text/javascript" src="__STATIC__/LIB/laypage/1.2/laypage.js"></script>
+<script type="text/javascript" src="__STATIC__/lib/datatables/1.10.0/jquery.dataTables.min.js"></script>
+<script type="text/javascript" src="__STATIC__/lib/laypage/1.2/laypage.js"></script>
 <script type="text/javascript">
   $(function () {
     $(".table-sort").DataTable({
-    });
+      "aaSorting": [[ 1, "desc" ]],//默认第几个排序
+      "bStateSave": true,//状态保存
+      "pading":false,
+  });
+
   });
   /*学生-添加*/
     function student_add(title,url,w,h){
